# cuaca

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  loop-phases.sh  package-lock.json  package.json  pyproject.toml
.claude/commands/: phase.md
.claude/skills/shadcn-ui-ux/: SKILL.md
.github/workflows/: etl.yml
apps/landing/: Dockerfile  next.config.ts  package-lock.json  package.json
apps/landing/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/landing/app/components/: AlertBanner.tsx  CuacaLayout.tsx  Footer.tsx  ForecastCard.tsx  HomeClient.tsx  Icon.tsx  LeafletMap.tsx  MedanSvgMap.tsx  (+4 more)
apps/landing/data/: kelurahan-adm4-map.json  medan-kecamatan.json
apps/landing/lib/: api.ts  geo-to-svg.ts  prisma.ts
apps/landing/prisma/: schema.prisma  seed.ts
dashboard/: README.md
database/schema/: 001_create_dim_tables.sql  002_create_fact_weather.sql  003_create_staging.sql  004_seed_dim_location.sql  005_dashboard_views.sql
docker/: Dockerfile.etl  docker-compose.yml  init-db.sh
docs/: architecture.md  backlog.md  deployment.md
etl/: __init__.py  requirements.txt
etl/dags/: weather_etl_dag.py
etl/extract/: __init__.py  _retry.py  bmkg.py  config.py  medan_adm4.py  mock.py  models.py  openweather.py  provider.py  run.py  storage.py
etl/load/: __init__.py  config.py  loader.py  run.py
etl/tests/: __init__.py  conftest.py  test_api_routes.py  test_dags.py  test_dashboard.py  test_extract.py  test_landing.py  test_load.py  test_transform.py
etl/transform/: __init__.py  config.py  pipeline.py  run.py
(+15 files in other folders)
