[project]
name = "weather-etl"
version = "0.1.0"
description = "ETL pipeline for Weather Data Platform Medan"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["etl*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "black>=24.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["etl/tests"]
pythonpath = ["."]
